Remove obsolte content and fix environments

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,25 +1,10 @@
 params {
   publishDirMode = "symlink"
   resultsDir = "results"
-  deployDir = "deploy/YkBsFFMUNnL8qcMtzEVGrJYN"
-
-  // SCENIC parameters
-  // expr = "expr_mat.tsv"
-  TFs = "data/scenic/allTFs_hg38.txt"
-  motifs = "data/scenic/motifs-v9-nr.hgnc-m0.001-o0.0.tbl"
-  db = "data/scenic/*.feather"
-  grn = "grnboost2"
-  // parameters for reading loom files:
-  cell_id_attribute = "CellID"
-  gene_attribute = "Gene"
-
-  // pySCENIC container location
-  pyscenic_tag = "0.9.18"
-  pyscenic_container = 'aertslab/pySCENIC:'+params.pyscenic_tag
+  deployDir = "deploy"
 }
 
 process {
-  cache = 'deep'
   cpus = 1
 }
 
@@ -31,28 +16,4 @@ report.file = "results/report.html"
 
 resume = true
 
-// Define executor profiles
-profiles {
-  standard {
-    process {
-      executor = 'sge'
-      penv = 'smp'
-      clusterOptions = { "-V -S /bin/bash -R y -q all.q" }
-    }
-  }
-
-  local {
-    executor {
-      cpus = 32
-    }
-  }
-}
-
-
-// Enable Singularity for SCENIC
-singularity.enabled = true
-singularity.autoMounts = true
-// redirect to singularity hub:
-params.pyscenic_container = 'shub://'+params.pyscenic_container
-
-workDir = "/home/sturm/scratch/projects/2019/vanderburg_oropharyngeal_cancer/work"
+workDir = "/home/sturm/scratch/projects/2020/kortekaas2020_paper/work"
